<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.octopus.teamcity.oidc</groupId>
    <artifactId>teamcity-oidc-plugin</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <scm>
        <connection>scm:git:${project.scm.url}</connection>
        <developerConnection>scm:git:${project.scm.url}</developerConnection>
        <url>git@github.com:OctopusDeploy/teamcity-oidc-plugin.git</url>
        <tag>HEAD</tag>
    </scm>
    <properties>
        <revision>1.0-SNAPSHOT</revision>
        <teamcity-version>2025.11</teamcity-version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <repositories>
        <repository>
            <id>JetBrains</id>
            <url>https://download.jetbrains.com/teamcity-repository</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>JetBrains</id>
            <url>https://download.jetbrains.com/teamcity-repository</url>
        </pluginRepository>
    </pluginRepositories>
    <dependencies>
        <dependency>
            <groupId>com.nimbusds</groupId>
            <artifactId>nimbus-jose-jwt</artifactId>
            <version>10.9</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.15.0</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.jetbrains.teamcity</groupId>
                <artifactId>teamcity-sdk-maven-plugin</artifactId>
                <version>0.4.3</version>
                <configuration>
                    <teamcityDir>/Users/svs/TeamCity</teamcityDir>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jetbrains.teamcity</groupId>
                    <artifactId>teamcity-sdk-maven-plugin</artifactId>
                    <version>0.4.3</version>
                    <configuration>
                        <teamcityDir>/Users/svs/TeamCity</teamcityDir>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <modules>
        <module>oidc-plugin-server</module>
        <module>build</module>
        <module>integration-tests</module>
    </modules>
</project>
